auto-test/tests/chapter_18/invalid_types/tag_resolution/address_of_wrong_type.c
struct s {
    int i;
};

int main(void) {
    
    struct s foo = {0};

    
    
    struct s {
        int i;
    };

    
    
    struct s *ptr = &foo;
}